--- a/app/src/main/res/layout/fragment_field_creator_direction.xml
+++ b/app/src/main/res/layout/fragment_field_creator_direction.xml
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_text"
-        app:layout_constraintBottom_toTopOf="@id/next_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         app:layout_constraintVertical_bias="0">
 
         <LinearLayout
@@ -100,17 +100,47 @@
         </LinearLayout>
     </RadioGroup>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/next_button"
+    <View
+        android:id="@+id/bottom_separator"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:text="@string/next"
-        android:enabled="false"
-        android:textColor="?attr/fb_color_text_high_contrast_inverted"
-        android:background="@drawable/cell"
-        android:backgroundTint="?attr/fb_color_primary"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/dividerHorizontal"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="?android:attr/colorBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/dialog_back"
+        android:src="@drawable/chevron_left"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
+
+    <ImageButton
+        android:id="@+id/forward_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/next"
+        android:enabled="false"
+        android:src="@drawable/chevron_right"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
