--- a/app/src/main/res/layout/fragment_field_creator_preview.xml
+++ b/app/src/main/res/layout/fragment_field_creator_preview.xml
@@ -56,7 +56,7 @@
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/create_field_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         app:layout_constraintTop_toBottomOf="@id/warning_card"
         app:layout_constraintVertical_bias="1.0">
 
@@ -97,20 +97,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/expand_view_button"
-        app:layout_constraintBottom_toTopOf="@id/create_field_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         android:layout_marginBottom="20dp"
         app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/create_field_button"
+    <View
+        android:id="@+id/bottom_separator"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:text="@string/field_creator_preview_create_button"
-        android:textColor="?attr/fb_color_text_high_contrast_inverted"
-        android:background="@drawable/cell"
-        android:backgroundTint="?attr/fb_color_primary"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/dividerHorizontal"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="?android:attr/colorBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/dialog_back"
+        android:src="@drawable/chevron_left"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
+
+    <Button
+        android:id="@+id/create_field_button"
+        style="@style/AppIntroButtonStyleCompat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/field_creator_preview_create_button"
+        android:textAppearance="@style/TextViewStyle.Bold"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
