--- a/app/src/main/res/layout/fragment_field_creator_size.xml
+++ b/app/src/main/res/layout/fragment_field_creator_size.xml
@@ -32,6 +32,7 @@
             android:id="@+id/field_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
             android:imeOptions="actionNext" />
 
     </com.google.android.material.textfield.TextInputLayout>
