--- a/app/src/main/res/layout/fragment_field_creator_preview.xml
+++ b/app/src/main/res/layout/fragment_field_creator_preview.xml
@@ -75,31 +75,27 @@
             android:gravity="center" />
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/expand_view_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_creator_preview_expand_button"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"
-        android:textColor="?attr/fb_color_text_high_contrast_inverted"
-        android:background="@drawable/cell"
-        android:backgroundTint="?attr/fb_color_primary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/warning_card"
-        app:layout_constraintBottom_toTopOf="@id/field_preview_grid" />
-
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/field_preview_grid"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/expand_view_button"
+        app:layout_constraintTop_toBottomOf="@id/warning_card"
         app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         android:layout_marginBottom="20dp"
         app:layout_constraintVertical_bias="0.0" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/expand_view_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_arrow_expand_all"
+        android:contentDescription="@string/field_creator_preview_expand_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/bottom_separator"
@@ -131,15 +127,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
 
-    <Button
+    <ImageButton
         android:id="@+id/create_field_button"
-        style="@style/AppIntroButtonStyleCompat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_creator_preview_create_button"
-        android:textAppearance="@style/TextViewStyle.Bold"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/field_creator_preview_create_button"
+        android:src="@drawable/ic_check_bold"
         app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/bottom_navigation"  />
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
