--- a/app/src/main/res/layout/fragment_field_creator_pattern_type.xml
+++ b/app/src/main/res/layout/fragment_field_creator_pattern_type.xml
@@ -69,6 +69,8 @@
                 android:id="@+id/radio_linear"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:clickable="false"
+                android:focusable="false"
                 android:layout_marginStart="16dp" />
         </LinearLayout>
 
@@ -114,6 +116,8 @@
                 android:id="@+id/radio_zigzag"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:clickable="false"
+                android:focusable="false"
                 android:layout_marginStart="16dp" />
         </LinearLayout>
     </RadioGroup>
