--- a/app/src/main/res/layout/fragment_field_creator_pattern_type.xml
+++ b/app/src/main/res/layout/fragment_field_creator_pattern_type.xml
@@ -122,6 +122,17 @@
         </LinearLayout>
     </RadioGroup>
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/pattern_preview_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pattern_radio_group"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
+        app:layout_constraintVertical_bias="0" />
+
     <View
         android:id="@+id/bottom_separator"
         android:layout_width="0dp"
