--- a/app/src/main/res/layout/fragment_field_creator_size.xml
+++ b/app/src/main/res/layout/fragment_field_creator_size.xml
@@ -84,6 +84,17 @@
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/size_preview_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dimensions_container"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
+        app:layout_constraintVertical_bias="0" />
+
     <View
         android:id="@+id/bottom_separator"
         android:layout_width="0dp"
