--- a/app/src/main/res/layout/fragment_field_creator_expanded_preview.xml
+++ b/app/src/main/res/layout/fragment_field_creator_expanded_preview.xml
@@ -5,29 +5,6 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/expanded_title_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/field_creator_expanded_preview_title"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:gravity="center"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/expanded_field_summary_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/TextViewStyle"
-        android:gravity="center"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/expanded_title_text" />
-
     <LinearLayout
         android:id="@+id/expanded_progress_container"
         android:layout_width="0dp"
@@ -37,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_separator"
-        app:layout_constraintTop_toBottomOf="@id/expanded_field_summary_text"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -61,9 +38,19 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/expanded_field_summary_text"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         android:layout_marginBottom="20dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/collapse_view_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:src="@drawable/ic_arrow_collapse_all"
+        android:contentDescription="@string/field_creator_preview_collapse_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/bottom_separator"
