--- a/app/src/main/res/layout/fragment_field_creator_expanded_preview.xml
+++ b/app/src/main/res/layout/fragment_field_creator_expanded_preview.xml
@@ -5,6 +5,50 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/expanded_title_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/field_creator_expanded_preview_title"
+        style="@style/TextAppearance.AppCompat.Title"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/expanded_field_summary_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/TextViewStyle"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/expanded_title_text" />
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/expanded_warning_card"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:visibility="gone"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/expanded_field_summary_text">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/field_creator_preview_large_field_warning"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
+            android:padding="16dp" />
+
+    </com.google.android.material.card.MaterialCardView>
+
     <LinearLayout
         android:id="@+id/expanded_progress_container"
         android:layout_width="0dp"
@@ -14,7 +58,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_separator"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/warning_card"
         app:layout_constraintVertical_bias="1.0">
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -38,7 +82,7 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/warning_card"
         app:layout_constraintBottom_toTopOf="@id/bottom_separator"
         android:layout_marginBottom="20dp" />
 
