--- a/app/src/main/res/layout/fragment_field_creator_preview.xml
+++ b/app/src/main/res/layout/fragment_field_creator_preview.xml
@@ -32,9 +32,9 @@
         android:id="@+id/warning_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:visibility="gone"
         app:cardCornerRadius="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/field_summary_text">
@@ -79,6 +79,7 @@
         android:id="@+id/field_preview_grid"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/warning_card"
